# Gabor-filter

./: CMakeLists.txt  README.md  con-matrix.h  image.hpp  main.cpp
